pkg/lang/testdata/ub/constraints/valid/check-predicate-chained-for-each-non-list.ub
constraints: [
  {
    kind: predicate
    @for-each: [
      { @rule: var.items },
      { @t:    @rule.value.subs }
    ]
    when:    true
    require: true
  },
]
