pkg/lang/testdata/ub/constraints/invalid/for-each-duplicate.ub
constraints: [
  {
    kind:      predicate
    @for-each: input.a
    @for-each: input.b
    when:      true
    require:   true
  },
]
